--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,8 @@
 ## v1.0.0
 - open Source Code
+
+## v1.0.1
+- update dependencies
+- search result add pinyin-match
+- fix some issues
+- add privacy-policy by AI
